clusters/vps1/config/headscale/headscale-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
