clusters/vps1/config/headscale/headscale-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: headscale
  labels:
    app: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
      - name: headscale
        image: headscale/headscale
        command:
          - "headscale"
          - "serve"
        volumeMounts:
        - name: headscale-data
          mountPath: /headscale
        - name: headscale-config
          mountPath: /etc/headscale
        - name: headscale-oidc-secret
          mountPath: /secrets
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
          - name: metrics
            protocol: TCP
            containerPort: 9090
          - name: derp
            protocol: UDP
            containerPort: 3478
      volumes:
      - name: headscale-config
        configMap:
          name: headscale-config
      - name: headscale-data
        persistentVolumeClaim:
          claimName: headscale
      - name: headscale-oidc-secret
        secret:
            secretName: headscale-oidc-secret
            items:
              - key: HEADSCALE_OIDC_TOKEN
                path: HEADSCALE_OIDC_TOKEN
