clusters/vps1/config/headscale/headscale-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: headscale
  namespace: headscale
spec:
  hostnames:
  - vpn.jkulzer.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: headscale
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
