clusters/vps1/config/headscale/headscale-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: headscale
  namespace: headscale
spec:
  hosts:
  - "vpn.jkulzer.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: headscale
        port:
          number: 8080
